fixed scrollbars

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -20,7 +20,6 @@ main{
         z-index: 1;
         border-radius: var(--bradius);
         overflow: hidden;
-        overflow-y: scroll;
         scrollbar-width: none;
         box-shadow: 0px 0px 8px 0px #000000;
         iframe{
@@ -31,8 +30,6 @@ main{
             border-radius: var(--bradius);
             width: 100%;
             height: 100%;
-            
-        
             box-sizing: content-box; 
         }
     }
