--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ main .project {
   z-index: 1;
   border-radius: var(--bradius);
   overflow: hidden;
-  overflow-y: scroll;
   scrollbar-width: none;
   -webkit-box-shadow: 0px 0px 8px 0px #000000;
           box-shadow: 0px 0px 8px 0px #000000;
